[gd_scene load_steps=69 format=2]

[ext_resource path="res://Legacy-Fantasy-VL.1 - High Forest/Legacy-Fantasy-VL.1 - High Forest/Mob/show-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Legacy-Fantasy-VL.1 - High Forest/Legacy-Fantasy-VL.1 - High Forest/Mob/Dead-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Photos/Health Bar.png" type="Texture" id=3]
[ext_resource path="res://Legacy-Fantasy-VL.1 - High Forest/Legacy-Fantasy-VL.1 - High Forest/Mob/walk-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Legacy-Fantasy-VL.1 - High Forest/Legacy-Fantasy-VL.1 - High Forest/Mob/Hide-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Snail.gd" type="Script" id=6]
[ext_resource path="res://Photos/pxlxxl.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Photos/explosion_dull.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.25, 13.75 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 288, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 336, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 288, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 336, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Walk",
"speed": 7.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "Hide",
"speed": 7.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Dead",
"speed": 7.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": false,
"name": "Show",
"speed": 7.0
} ]

[sub_resource type="Animation" id=55]
resource_name = "100"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 72, 7 ) ]
}

[sub_resource type="Animation" id=56]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 72, 7 ) ]
}

[sub_resource type="Animation" id=35]
resource_name = "100-90"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 72, 7 ), Vector2( 64.8, 7 ) ]
}

[sub_resource type="Animation" id=36]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 7 ) ]
}

[sub_resource type="Animation" id=37]
resource_name = "90-80"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 64.8, 7 ), Vector2( 57.6, 7 ) ]
}

[sub_resource type="Animation" id=38]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64.8, 7 ) ]
}

[sub_resource type="Animation" id=39]
resource_name = "80-70"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 57.6, 7 ), Vector2( 50.4, 7 ) ]
}

[sub_resource type="Animation" id=40]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 57.6, 7 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "70-60"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 50.4, 7 ), Vector2( 43.2, 7 ) ]
}

[sub_resource type="Animation" id=42]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50.4, 7 ) ]
}

[sub_resource type="Animation" id=43]
resource_name = "60-50"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 43.2, 7 ), Vector2( 36, 7 ) ]
}

[sub_resource type="Animation" id=44]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 50.4, 7 ) ]
}

[sub_resource type="Animation" id=45]
resource_name = "50-40"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 36, 7 ), Vector2( 28.8, 7 ) ]
}

[sub_resource type="Animation" id=46]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 43.2, 7 ) ]
}

[sub_resource type="Animation" id=47]
resource_name = "40-30"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 28.8, 7 ), Vector2( 21.6, 7 ) ]
}

[sub_resource type="Animation" id=48]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 36, 7 ) ]
}

[sub_resource type="Animation" id=49]
resource_name = "30-20"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 21.6, 7 ), Vector2( 14.4, 7 ) ]
}

[sub_resource type="Animation" id=50]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 28.8, 7 ) ]
}

[sub_resource type="Animation" id=51]
resource_name = "20-10"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 14.4, 7 ), Vector2( 7.2, 7 ) ]
}

[sub_resource type="Animation" id=52]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 21.6, 7 ) ]
}

[sub_resource type="Animation" id=53]
resource_name = "10-0"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 7.2, 7 ), Vector2( 0, 7 ) ]
}

[sub_resource type="Animation" id=54]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7.2, 7 ) ]
}

[sub_resource type="DynamicFont" id=57]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=58]
resource_name = "Float"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 46, -25 ), Vector2( -70, -15 ), Vector2( -41, -21 ), Vector2( 28, -17 ), Vector2( 28, 2 ), Vector2( 15, -21 ), Vector2( -63, -16 ) ]
}

[sub_resource type="Animation" id=59]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 46, -25 ) ]
}

[sub_resource type="Animation" id=60]
resource_name = "Left&Right"
length = 14.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 580, 321 ), Vector2( 180, 321 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 7, 7.001, 7.002 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, false, true ]
}

[node name="Snail" type="KinematicBody2D"]
position = Vector2( 580, 321 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 2 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, -9 )
scale = Vector2( 1.55469, 1.55469 )
frames = SubResource( 34 )
animation = "Walk"

[node name="HealthBar" type="Sprite" parent="."]
position = Vector2( -2.95477, -34.8125 )
scale = Vector2( 0.0904378, 0.0904378 )
texture = ExtResource( 3 )

[node name="BasewhiteHealthBar" type="ColorRect" parent="."]
margin_left = 45.0
margin_top = -27.0
margin_right = 117.0
margin_bottom = -20.0
grow_horizontal = 0
rect_rotation = -179.917

[node name="HealthBar2" type="ColorRect" parent="."]
margin_left = -27.0
margin_top = -34.0
margin_right = -19.8
margin_bottom = -27.0
color = Color( 0.866667, 0.0862745, 0.0862745, 1 )

[node name="100" type="AnimationPlayer" parent="HealthBar2"]
autoplay = "100"
anims/100 = SubResource( 55 )
anims/RESET = SubResource( 56 )

[node name="100-90" type="AnimationPlayer" parent="HealthBar2"]
anims/100-90 = SubResource( 35 )
anims/RESET = SubResource( 36 )

[node name="90-80" type="AnimationPlayer" parent="HealthBar2"]
anims/90-80 = SubResource( 37 )
anims/RESET = SubResource( 38 )

[node name="80-70" type="AnimationPlayer" parent="HealthBar2"]
anims/80-70 = SubResource( 39 )
anims/RESET = SubResource( 40 )

[node name="70-60" type="AnimationPlayer" parent="HealthBar2"]
anims/70-60 = SubResource( 41 )
anims/RESET = SubResource( 42 )

[node name="60-50" type="AnimationPlayer" parent="HealthBar2"]
anims/60-50 = SubResource( 43 )
anims/RESET = SubResource( 44 )

[node name="50-40" type="AnimationPlayer" parent="HealthBar2"]
anims/50-40 = SubResource( 45 )
anims/RESET = SubResource( 46 )

[node name="40-30" type="AnimationPlayer" parent="HealthBar2"]
anims/40-30 = SubResource( 47 )
anims/RESET = SubResource( 48 )

[node name="30-20" type="AnimationPlayer" parent="HealthBar2"]
anims/30-20 = SubResource( 49 )
anims/RESET = SubResource( 50 )

[node name="20-10" type="AnimationPlayer" parent="HealthBar2"]
anims/20-10 = SubResource( 51 )
anims/RESET = SubResource( 52 )

[node name="10-0" type="AnimationPlayer" parent="HealthBar2"]
anims/10-0 = SubResource( 53 )
anims/RESET = SubResource( 54 )

[node name="DPS" type="Label" parent="."]
visible = false
margin_left = 46.0
margin_top = -25.0
margin_right = 62.0
margin_bottom = -7.0
custom_fonts/font = SubResource( 57 )
text = "10"

[node name="Float" type="AnimationPlayer" parent="DPS"]
autoplay = "Float"
anims/Float = SubResource( 58 )
anims/RESET = SubResource( 59 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DPSTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Walk" type="AnimationPlayer" parent="."]
autoplay = "Left&Right"
anims/Left&Right = SubResource( 60 )

[node name="HideTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="FireBallHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DPSTimer" to="." method="_on_DPSTimer_timeout"]
[connection signal="timeout" from="HideTimer" to="." method="_on_HideTimer_timeout"]
